Fix details card for reviews with short notes on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -192,7 +192,7 @@ header {
   justify-content: flex-end;
 }
 
-#top-button {
+#top-button-container {
   display: none;
 }
 
