--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -134,6 +134,7 @@
 
     .details {
         flex: 1;
+        width: 100%;
     }
 
     .color { color: $gray; }
